<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="amazing_20">Amazing: 20%</string>
    <string name="decent_18">Decent: 18%</string>
    <string name="quite_alright_15">Quite Alright: 15%</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>

    <string name="tip_Result">Tip Amount: %s</string>
    <string name="round_up_the_tip">Round up the tip?</string>
    <string name="textInput_costOfService">Cost of Service</string>
</resources>