<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/costOfServiceIC"
        android:layout_height="20dp"
        android:layout_width="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cost_ic"
        app:layout_constraintTop_toTopOf="@id/costOfService"
        app:layout_constraintBottom_toBottomOf="@id/costOfService"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/costOfService"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:inputType="text"
        android:hint="@string/cost_of_service"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/costOfServiceIC"
        android:importantForAutofill="no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/costOfServiceET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iconServiceQuestion"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/tip_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/serviceQuestion"
        app:layout_constraintBottom_toBottomOf="@id/serviceQuestion"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:id="@+id/serviceQuestion"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.TextView"
        app:layout_constraintStart_toEndOf="@id/iconServiceQuestion"
        app:layout_constraintTop_toBottomOf="@id/costOfService"
        />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:checkedButton="@id/optionFifteenPercent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/serviceQuestion"
        app:layout_constraintTop_toBottomOf="@id/serviceQuestion">

        <RadioButton
            android:id="@+id/optionTwentyPercent"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/amazing_20"
            />
        <RadioButton
            android:id="@+id/optionEighteenPercent"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/decent_18"
            />
        <RadioButton
            android:id="@+id/optionFifteenPercent"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/quite_alright_15"
            />
    </RadioGroup>

    <ImageView
        android:id="@+id/iconRoundUpIV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/roundup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundUpSwitch"
        app:layout_constraintBottom_toBottomOf="@id/roundUpSwitch"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/roundUpSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_the_tip"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconRoundUpIV"
        app:layout_constraintTop_toBottomOf="@id/tipOptions"
        android:layout_marginStart="5dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calculateBTN"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/roundUpSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tipResult"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/tip_Result"
        android:hint="@string/tip_amount"
        app:layout_constraintTop_toBottomOf="@id/calculateBTN"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.TextView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>